implements closing on skip uri

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
 
-    <string name="app_name">Disable NFC Tag Empty</string>
+    <string name="app_name">Disable NFC Tag Skip</string>
 
 </resources>
